<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_planDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanDetailsFragment">

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="717dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_mealType"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="334dp"
            android:paddingTop="20dp"
            android:text="@string/meal_type"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtView_mealType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_location"
            android:layout_width="97dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="310dp"
            android:paddingTop="20dp"
            android:text="@string/location"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtView_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="13dp"
            android:paddingTop="10dp"
            android:text="@string/date"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="13dp"
            android:paddingTop="10dp"
            android:text="@string/time"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_maxSpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="30dp"
            android:text="@string/maximum_spot"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtView_maxSpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="322dp"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            android:text="@string/description"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtView_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#820505"
                android:text="@string/edit" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#820505"
                android:text="@string/delete" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>