<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanDetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#820505"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLength="50"
            android:text="@string/plan_details"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/txt_mealType"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="334dp"
            android:paddingTop="20dp"
            android:text="@string/meal_type"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtView_mealType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_location"
            android:layout_width="97dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="310dp"
            android:paddingTop="20dp"
            android:text="@string/location"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtView_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="13dp"
            android:paddingTop="10dp"
            android:text="@string/date"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="13dp"
            android:paddingTop="10dp"
            android:text="@string/time"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_maxSpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="30dp"
            android:text="@string/maximum_spot"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtView_maxSpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="322dp"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            android:text="@string/description"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtView_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#820505"
            android:text="Join" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>