<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/active_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivePlanActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#820505"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:title=" " />

    <TextView
        android:id="@+id/txt_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_plans"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.432" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_breakfast"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:backgroundTint="#B09393"
                android:text="@string/breakfast"
                android:textColor="@color/white"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btn_lunch"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:backgroundTint="#B09393"
                android:gravity="center|center_horizontal"
                android:text="@string/lunch"
                android:textColor="@color/white"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btn_dinner"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:backgroundTint="#B09393"
                android:text="@string/dinner"
                android:textColor="@color/white"
                app:cornerRadius="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_activePlan"
                android:name="com.example.eat.BreakfastFragment"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                tools:layout="@layout/fragment_breakfast" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="153dp"
        android:layout_height="62dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/red"
        android:text="@string/create_plan"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:elevation="2dp"
        app:itemActiveIndicatorStyle="@color/red"
        app:itemIconSize="30dp"
        app:itemIconTint="@color/white"
        app:labelVisibilityMode="labeled"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/home_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
