<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePlanFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="415dp"
        android:layout_height="641dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_mealType"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="334dp"
            android:paddingTop="20dp"
            android:text="Meal Type:"
            android:textStyle="bold"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="407dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/btn_createBreakfast"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:text="@string/breakfast" />

                <RadioButton
                    android:id="@+id/btn_createLunch"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:text="@string/lunch" />

                <RadioButton
                    android:id="@+id/btn_createDinner"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:text="@string/dinner" />

            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_location"
            android:layout_width="97dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="310dp"
            android:paddingTop="20dp"
            android:text="Location:"
            android:textStyle="bold"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="13dp"
                android:paddingTop="20dp"
                android:text="Date:"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="13dp"
                android:paddingTop="20dp"
                android:text="Time:"
                android:textStyle="bold"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/mm_dd_yyyy"
                android:inputType="date" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="00:00"
                android:inputType="time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_maxSpot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="40dp"
                android:text="Maximum Spot:"
                android:textStyle="bold"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="322dp"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            android:text="Description:"
            android:textStyle="bold"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="328dp"
            android:layout_height="120dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInput_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Description" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_createNew"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="#820505"
            android:text="Create" />
    </LinearLayout>

</FrameLayout>